    <https://github.com/jhy/jsoup/pull/1455>

  * Improvement: better parsing performance when under high thread concurrency
    <https://github.com/jhy/jsoup/pull/1402>

  * Improvement: added Element#id(String) ID attribute setter.

  * Improvement: in Document, #body() and #head() accessors will now automatically create those elements, if they were
    missing (e.g. if the Document was not parsed from HTML).

  * Improvement: when cleaning a document, the output settings of the original document are cloned into the cleaned
    document.
    <https://github.com/jhy/jsoup/issues/1417>

  * Improvement: when parsing XML, disable pretty-printing by default.
    <https://github.com/jhy/jsoup/issues/1168>

  * Improvement: much better performance in Node#clone() for large and deeply nested documents. Complexity was O(n^2) or
    worse, now O(n).

  * Build Improvement: moved to GitHub Workflows for build verification.

  * Build Improvement: updated Jetty (used for integration tests; not bundled) to 9.4.35.v2020112.

  * Build Improvement: added nullability annotations and initial settings.
    <https://github.com/jhy/jsoup/pull/1467>

  * Bugfix: when parsing HTML, could throw NPEs on some tags (isindex or table>input).
    <https://github.com/jhy/jsoup/issues/1404>

  * Bugfix: in HttpConnection.Request, headers beginning with "sec-" (e.g. Sec-Fetch-Mode) were silently discarded by
    the underlying Java HttpURLConnection. These are now settable correctly.
    <https://github.com/jhy/jsoup/issues/1461>

  * Bugfix: when adding child Nodes to a Node, could incorrectly reparent all nodes if the first parent had the same
    length of children as the incoming node list.

  * Bugfix: when wrapping an orphaned element, would throw an NPE.

  * Bugfix: when wrapping an element with HTML that included multiple sibling elements, those siblings were incorrectly
    added as children of the wrapper instead of siblings.
